--- a/05-working-on-layout-with-partials/views/includes/navigation.ejs
+++ b/05-working-on-layout-with-partials/views/includes/navigation.ejs
@@ -4,6 +4,7 @@
             <li class="main-header__item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
             <li class="main-header__item"><a class="<%= path === '/products' ? 'active' : '' %>" href="/">Products</a></li>
             <li class="main-header__item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/">Cart</a></li>
+            <li class="main-header__item"><a class="<%= path === '/orders' ? 'active' : '' %>" href="/">Orders</a></li>
             <li class="main-header__item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
             <li class="main-header__item"><a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>
         </ul>
